src/styles/styles.scss
@import "config/config";

@import "foundation/foundation";
@import "foundation/utils";
@import "resets/resets";
// @import "fonts/GTWalsheimPro/Bold/font.css";
@import "fonts/IntegralCF-Heavy/stylesheet.css";
@import "fonts/Avenir/Medium/stylesheet.css";
@import "fonts/Avenir/Book/stylesheet.css";
@import "fonts/Avenir/Heavy/stylesheet.css";
@import "fonts/Lato/Light/stylesheet.css";
@import "fonts/Lato/Regular/stylesheet.css";
@import "fonts/Lato/Bold/stylesheet.css";
@include block(root) {
  position: relative;
  min-height: 100vh;
  max-width: 100%;
  margin: 0 auto;
}

@include block(accordion) {
  @include xy-grid(vertical);
  color: #FFFFFF;
  cursor: pointer;
  @include element(title){
    font-size: 24rem;
    font-family: 'Avenir';
    font-weight: 500;
  }
  @include element(item) {
    background-color: #3CD49B;
    padding: 6rem 36rem 6rem 36rem;
    border-radius: 10rem;
    margin-bottom: 17rem;
    transition: padding ease 0.3s;
    @include modifier(active) {
      background-color: #02532A;
    }
    @include breakpoint(medium down){
      padding: 6rem 21rem 6rem 21rem;
    }
  }
  
  @include element(content) {
    overflow: hidden;
    height: 0;
    transition: all ease 0.3s;
    font-size: 18rem;
    font-family: 'Avenir';
    font-weight: 500;
    margin-top: 10px;
    a{
      color: #3CD49B;
      font-weight: 500;
    }
  }
}

@include block(faq) {
  @include xy-grid-container();
  margin-top: 24.25em;
  max-width: 873rem;
  @include breakpoint(medium down){
    padding-left: 15px;
    padding-right: 15px;
  }
  @include element(title) {
    color: #fff;
    font-size: 35rem;
    margin-bottom: 12rem;
    font-family: 'Avenir 85';
    font-weight: bold;
  }
}

@include block(privacy) {
  @include xy-grid-container(1000px);
  padding: 5em;

  @include breakpoint(small down) {
    padding: 2em;
  }
  background: white;

  h1 {
    font-size: 2em;
    font-weight: bold;
    margin: 0.67em 0;
  }

  h3 {
    font-size: 1.17em;
    font-weight: bold;
    margin: 1em 0px;
  }

  h5 {
    font-size: 1em;
    font-weight: bold;
    margin: 1em 0px;
  }

  p {
    display: block;
    margin: 1em 0px;
  }

  ul {
    display: block;
    list-style-type: disc;
    margin: 1em 0px;
    padding-inline-start: 40px;
  }
}

@include block(nav){
  min-height: 80px;
  max-width: 1630px;
  margin: 0 auto;
  padding:0 103px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: sticky;
  top: 0;
  z-index: 9999;
  margin-bottom: 1px;
  background-color: black;
  border: 1px solid #47CC8A;
  @include breakpoint(medium down){
    padding: 0 30px;
    gap: 20px;
  }
  img{
    @include breakpoint(small down){
      max-width: 120px;
    }
  }

  @include element(content){
    position: relative;
  }

  @include element(button){
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    background-color: #47CC8A;
    border-radius: 10px;
    width: 238px;
    height: 50px;
    font-family: 'Avenir 85';
    font-weight: bold;
    transition: all 0.2s ease-in-out;
    &:hover{
      background-color: white;
      color: #47CC8A;
      transition: all 0.2s ease-in-out;
    }
    @include breakpoint(small down){
      width: 210px;
      font-size: 18px;
      height: 45px;
    }
  }
  @include element(popup){
    position: absolute;
    background-color: white;
    top:0;
    border: 1px solid #47CC8A;
    border-radius: 10px;
    width: 238px;
    padding: 12.5px 50px 47px 50px;
    height:0;
    visibility: hidden;
    opacity:0;
    transition: all 0.5s ease-in-out;

    h3{
      font-family: 'Avenir';
      font-size: 20px;
      font-weight: 900;
      color: #47CC8A;
      text-align: center;
      padding-bottom:23.5px;
    }
  }
}

@include block(main) {
  background-repeat: no-repeat;
  // padding-top: 25em;
  position: relative;
  
  @include xy-grid(vertical);
  @include flex-align(center, middle);
  @include xy-grid-container();

  @include element(firstPlanet){
  position: absolute;
  top: 3%;
  left: 3%;
}

  @include element(secondPlanet){
    position: absolute;
    top: 15.5%;
    max-height: 744px;
    right: 0;
    @include breakpoint(medium down){
      max-height: 200px;
      top: 20.5%;
    }
  }

    @include element(thirdPlanet){
      position: absolute;
      top:24.9%;
      left:0%;
      max-height: 600px;
      @include breakpoint(medium down){
        max-height: 200px;
        top: 23%;
      }
    }

  @include element(title) {
    text-align: center;
    // padding-bottom: 4.8em;
    display: flex;
    height: calc(100vh - 80px);
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
    svg{
      max-width: 814px;
      width: 100%;
    }
    img {
      position: absolute;
      bottom: 61rem;
    }
  }
  @include element(subTitle){
    color: #47cd8a;
    border: 9px solid #47CC8A;
    background-color: white;
    padding: 4px 18px 16px 18px;
  }

  @include block(use_your) {
    font-size: 3.325em;
    font-family: "GTWalsheimPro-Medium";
    font-family: "Integral CF";
    font-weight: 900;
    color: white;
    text-align: center;
    padding-bottom: 1em;
    margin-top: 349px;

    @include block(title) {
      font-family: "GTWalsheimPro-Bold";
      font-size: 24px;
      font-weight: 500;
      color: white;
      padding: 2em 0 0.4em;
    }

    @include block(apps) {
      @include flex-align(center, middle);
      @include breakpoint(medium up) {
        @include xy-grid();

        img {
          &:first-child {
            margin-right: 10px;
          }
        }
      }
      img {
        width: 150px;
      }
    }
    @include breakpoint(small down) {
      font-size: 1.725em;
    }
    > span {
      color: #47cd8a;
      font-family: "GTWalsheimPro-Bold";
      font-weight: bold;
      font-style: italic;
    }
    @include breakpoint(medium down) {
      padding-bottom: 5em;
      max-width: 90%;
    }
    @include breakpoint(large up) {
      max-width:1383px;
    }
  }

  @include block(images) {
    @include xy-grid(vertical);
    @include flex-align(center, middle);

    @include block(phone) {
      max-width: 850px;
      margin-bottom: -135px;
    }

    

    @include block(phone) {
      
      @include breakpoint(small down) {
        width: 250px;
      }
    }
  }

  @include block(download){
    font-size: 24px;
    color: white;
    height: 70px;
    width: 365px;
    border-radius: 10px;
    background-color: #47CC8A;
    text-align: center;
    z-index: 999;
    font-family: 'Avenir 85';
    font-weight: bold;
    transition: all 0.2s ease-in-out;
    &:hover{
      background-color: white;
      color: #47CC8A;
      transition: all 0.2s ease-in-out;
    }
  }

  @include block(large_popup){
    position: absolute;
    background-color: white;
    bottom: 0;
    border: 1px solid #47CC8A;
    border-radius: 10px;
    width: 365px;
    padding: 28px 32px 35px 32px;
    height: 0;
    visibility: hidden;
    opacity: 0;
    transition: all 0.5s ease-in-out;

    h3{
      font-family: 'Avenir';
      font-size: 20px;
      font-weight: 500;
      color: #47CC8A;
      text-align: center;
      padding-top:12px;
    }
    svg{
      height: calc(100% - 38px);
    }
  }
  }

  @include block (download_store){
    display: flex;
    gap: 12px;
    margin-top: 22px;
    justify-content: center;
    img{
      width: 143px;
    }
   
  }

  @include block(image) {
    position: relative;

    @include block(logo) {
      @include element(wrapper) {
        @include breakpoint(medium down) {
          background: black;
          padding: 1.4em;
        }
        @include breakpoint(medium up) {
          padding: 0.4em;
          position: absolute;
          right: 0;
          bottom: 0;
        }

        svg {
          // width: 70px;
          height: 25px;
          // max-width: 70px;
          padding-bottom: 0.4em;
        }
        span {
          font-weight: bold;
          color: white;
        }
      }
    }

    @include element(wrapper) {
      position: relative;

      @include block(button) {
        background-color: #47cd8a;
        font-family: "GTWalsheimPro-Medium";
        color: black;
        text-align: center;
        border-radius: 10px;
        font-size: 1.7em;
        padding: 10px;
        z-index: 999;
        svg {
          width: 25px;
          margin-right: 0.5em;
        }
      }
    }
  }

  @include block(land) {
    margin-bottom: auto;
  }

  @include block(footer) {
    padding: 1em;
    background-color: #02532A;
    color: white;
    padding: 77px 103px;
    display: grid;
    grid-template-columns: repeat(5, minmax(0, 1fr));
    width: 100%;
    font-size: 1em;
    font-family: "GTWalsheimPro-Medium";
    @include breakpoint(medium down){
      grid-template-columns: repeat(2, minmax(0, 1fr));
      row-gap: 40px;
      padding: 77px 30px;
    }

    @include block(logo){
      h2{
        margin-top: 9px;
        font-size: 20px;
        line-height: 24px;
        font-family: 'Lato';
        font-weight: normal;
        span{
          font-family: 'Lato';
          font-weight: 300;
        }
      }
    }

    @include block(footer-links){
      display: flex;
      flex-direction: column;
      gap:22px;
      color: white;
      font-size: 18px;
      h3{
      
        font-family: 'Avenir';
        font-weight: 500;
      }
      a {
        font-family: 'Avenir LT Std';
        font-weight: normal;
      }
    }

    @include block(footer-last){
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      margin-left: -99px;
      @include breakpoint(medium down){
        margin-left: 0;
      }
    }

    @include block(footer-downloadContainer){
      display: flex;
      align-items: flex-end;
      gap:20px;
      justify-content:space-between
    }
    @include block(footer-QR){
      padding: 15px;
      background-color: white;
      border: 1px solid #47CC8A;
      border-radius: 10px;
      display: flex;
      justify-content: center;
      align-items: center;
    }
    @include block(download_store-footer){
    max-width: 200px;
    display: flex;
    gap: 12px;
    margin-top: 22px;
    justify-content: center;
    }
    @include block(footer_input){
      border: 1px solid white;
      display: flex;
      align-items: center;
      @include breakpoint(medium down){
        width: 305px;
      }
    }
    input{
      padding:12px 0px 12px 12px;
      font-size: 12px;
      color: white;
      font-family: 'Lato';
      font-weight: 300;
      background-color: transparent;
      border: none;
      width: 385px;
    }
    ::placeholder{
      color: white;
    }
    button{
      background-color: white;
      font-size: 20px;
      font-weight: bold;
      height: 40px;
      color: #02532A;
      min-width: 130px;
      padding: 0 10px;
      font-family: 'Lato';
      font-weight: bold;
      @include breakpoint(medium down){
        font-size: 16px;
        min-width: 99px;
      }
    }

  }
  


@include block(pending) {
  background: #38d989;
  height: 100vh;
  @include xy-grid(vertical);
  @include flex-align(center, middle);
  @include xy-grid-container(100%);

  @include element(logo) {
    margin-bottom: 56rem;
  }

  @include element(typography) {
    font-size: 18px;
    line-height: 22px;
    text-align: center;
    color: white;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
    padding: 0 30rem;
    p {
      margin-bottom: 50rem;
      &:last-child {
        font-size: 20px;
      }
    }
    span {
      font-family: "GTWalsheimPro-Bold";
      font-weight: bold;
      font-style: normal;
    }
  }
}

